--- a/src/components/RegistrationComponent/RegistrationForm.css
+++ b/src/components/RegistrationComponent/RegistrationForm.css
@@ -29,7 +29,38 @@
     box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
     text-align: center;
     position: relative;
-    cursor: pointer
+    cursor: pointer;
+    /*visibility: hidden*/
+}
+
+.labelUpload {
+    /*display: inline-block;*/
+    /*padding: 0.7em 1.4em;*/
+    /*margin: 0 0.3em 0.3em 0;*/
+    /*border-radius: 0.15em;*/
+    /*box-sizing: border-box;*/
+    /*text-decoration: none;*/
+    /*font-family: 'Roboto', sans-serif;*/
+    /*text-transform: uppercase;*/
+    /*font-weight: 400;*/
+    /*color: #FFFFFF;*/
+    /*background-color: #3f51b5;*/
+    /*box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);*/
+    /*text-align: center;*/
+    /*position: relative;*/
+    cursor: pointer;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: solid 1px #20538D;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: #4479BA;
+    color: #FFF;
+    padding: 8px 12px;
+    text-decoration: none;
 }
 
 :disabled,
@@ -46,4 +77,12 @@ button[disabled] {
 
 body {
     background-color: #f8f5f5;
+}
+
+.refreshIcon {
+    cursor: pointer;
+}
+
+.toastCard{
+    background-color: #3f51b5;
 }
